# pconf.nvim

lua/: pconf.lua
lua/pconf/: init.lua  lib.lua  loadlib.lua
src/: .clang-tidy  CMakeLists.txt  example_dirent.c  example_luaapi.c  fnames.c
src/.cache/clangd/index/: fnames.c.E0CFE4916F34D49E.idx
